PMTiles QA fixes
* Fix NPE when PMTilesMetadata contains no VectorLayers
* Fix virtual hosted style URL parsing for S3 URLs